log
Thu 21 Mar 2024 02:45:21 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:14: error: ‘lista’ undeclared (first use in this function)
   52 |     pushBack(lista, valor);
      |              ^~~~~
exercises.c:52:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
149c893
Thu 21 Mar 2024 02:45:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2429d81
Thu 21 Mar 2024 02:46:57 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:23: error: implicit declaration of function ‘length’ [-Werror=implicit-function-declaration]
   66 |   for (int i = 0; i < length(L); i++)
      |                       ^~~~~~
exercises.c:68:20: error: implicit declaration of function ‘get’; did you mean ‘getw’? [-Werror=implicit-function-declaration]
   68 |     suma += *(int*)get(L, i);
      |                    ^~~
      |                    getw
exercises.c:68:14: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   68 |     suma += *(int*)get(L, i);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
13ddd65
